smoke testing working/ now: page load, verification,main,input,submit button,verify client table displayed

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "TestSettings": {
-    "BaseUrl": "https://frontend-and-backend-jet.vercel.app",
+    "BaseUrl": "http://localhost:3000",
     "LocalUrl": "http://localhost:3000",
     "Browser": "Chrome",
     "ImplicitWait": 10,
